# industry-4.0

./: README.md
lab1-esp32/distance/: diagram.json
lab1-esp32/distance/src/: main.cpp
lab1-esp32/luminosity/: diagram.json
lab1-esp32/luminosity/src/: main.cpp
lab1-esp32/presence/: diagram.json
lab1-esp32/presence/src/: main.cpp
lab1-esp32/smart-room/: diagram.json  platformio.ini
lab1-esp32/smart-room/src/: RoomStateMachine.cpp  RoomStateMachine.h  Sensors.cpp  Sensors.h  main.cpp
lab1-esp32/temperature/: diagram.json
lab1-esp32/temperature/src/: main.cpp
lab3-ml/: lab-ml-edge-devices
lab3-ml/esp32-ml/: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32  sdkconfig.esp32s3
lab3-ml/esp32-ml/components/esp-tflite-micro/: README.md
lab3-ml/esp32-ml/src/: main.cpp  model_data.h  test_images.h
lab3-ml/esp32-ml/tools/: main.py
lab5-digital-twin/: lab-digital-twin.md
lab5-digital-twin/digital-twins/: README.md  docker-compose.yml  pyproject.toml
lab5-digital-twin/digital-twins/ditto/: docker-compose.yml
lab5-digital-twin/digital-twins/mock_device/: mock_device.py
lab5-digital-twin/digital-twins/mosquitto/: mosquitto.conf
lab5-digital-twin/digital-twins/setup/: 01_create_policy.py  02_create_mqtt_connection.py  03_create_thing.py  04_create_command_ready_thing.py  05_create_bidirectional_mqtt_connection.py
