[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "project"
version = "0.1.0"
description = "Industry 4.0 digital twin lab with Eclipse Ditto and Mosquitto"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "paho-mqtt",
  "requests",
  "streamlit",
  "ditto-client @ git+https://github.com/eclipse-ditto/ditto-clients-python.git",
]

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["application"]
